<resources>
    <string name="app_name">task</string>
    <string name="failed_to_load_data">Failed To load data</string>
    <string name="success">success</string>
    <string name="loading">Loading…</string>
    <string name="product_name">Product name: </string>
    <string name="product_type">Product type: </string>
    <string name="food">Food</string>
    <string name="type">Type</string>
    <string name="drink">Drink</string>
    <string name="drug">Drug</string>
    <string name="product_code">Product Code: </string>
    <string name="expire_date">Expire date: </string>
    <string name="enter_valid_product_code">Enter valid product code</string>
    <string name="enter_valid_product_name">Enter valid product name</string>
    <string name="select_product_type">Select product type</string>
    <string name="select_correct_expire_date">Select correct expire Date</string>
    <string name="select_expire_time">Select expire_time</string>
    <string name="product_added_successful">Product added successful</string>
    <string name="products_fetched_successfully">Products fetched successfully</string>
    <string name="add_product">Add product</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="scan_product">Scan Product</string>
    <string name="title_home">Home</string>
    <string name="title_scan_product">Scan</string>
    <string name="title_expired_product">Expired</string>
    <string name="num_of_products_is_less_than_allowed_num">Num of products is less allowed num(%d)</string>
    <string name="expired_date_warn">Expired Date Warn</string>
    <string name="expired_date_warn_notification_content">Please, note that the %s product with code (%s) in the %s category has been expired.</string>
    <string name="pick_product_type">Pick product type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="mocking_message">This product will expired after more than one day, want to mock it?</string>
    <string name="edit_date">Edit Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_can_enter_barcode_manually">You can enter barcode manually</string>
    <string name="empty">""</string>
    <string name="left_days">Left Days:</string>
    <string name="left_days_num">%d Days</string>
    <string name="ok">OK</string>

</resources>