<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:backgroundTint="@color/colorPrimaryDark"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">


        <TextView
            android:id="@+id/products_name_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/products_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/products_name_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/products_name_label_tv"
            tools:text="@string/name" />




        <TextView
            android:id="@+id/products_code_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_code"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/products_name_label_tv" />

        <TextView
            android:id="@+id/products_code_tv"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/products_code_label_tv"
            app:layout_constraintStart_toEndOf="@+id/products_code_label_tv"
            tools:text="@string/code" />


        <TextView
            android:id="@+id/product_type_lbl_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/products_code_label_tv" />

        <TextView
            android:id="@+id/product_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/product_type_lbl_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_type_lbl_tv"
            tools:text="@string/type" />

        <TextView
            android:id="@+id/expire_date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire_date"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_type_lbl_tv" />

        <TextView
            android:id="@+id/expire_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/expire_date_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expire_date_label_tv"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/remaining_days_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_days"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expire_date_label_tv" />

        <TextView
            android:id="@+id/remaining_days_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColor="@color/white_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBaseline_toBaselineOf="@+id/remaining_days_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/remaining_days_label_tv"
            tools:text="5 days" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>