<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp">

        <SurfaceView
        android:id="@+id/svBarcode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/barcode_border_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/qr_code_border"
            app:layout_constraintBottom_toBottomOf="@+id/svBarcode"
            app:layout_constraintEnd_toEndOf="@+id/svBarcode"
            app:layout_constraintStart_toStartOf="@+id/svBarcode"
            app:layout_constraintTop_toTopOf="@+id/svBarcode" />

        <View
            android:id="@+id/barcode_recognition_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/barcode_border_view"
            app:layout_constraintEnd_toEndOf="@+id/barcode_border_view"
            app:layout_constraintStart_toStartOf="@+id/barcode_border_view"
            app:layout_constraintTop_toTopOf="@+id/barcode_border_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_code_il"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svBarcode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_il"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_code_il">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/pick_product_type"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="@+id/product_name_il"
            app:layout_constraintTop_toBottomOf="@+id/product_name_il" />

        <RadioGroup
            android:id="@+id/type_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/svBarcode"
            app:layout_constraintStart_toStartOf="@+id/type_tv"
            app:layout_constraintTop_toBottomOf="@+id/type_tv">


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/food_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/food"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/drink_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/drink"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@id/drug_rb"
                app:layout_constraintStart_toEndOf="@+id/food_rb"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/drug_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/drug"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/drink_rb"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/date_p"
            app:layout_constraintStart_toStartOf="@+id/product_name_il"
            app:layout_constraintTop_toTopOf="@+id/date_p" />


        <DatePicker
            android:id="@+id/date_p"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_rg"
            tools:ignore="ContentDescription" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@+id/time_p"
            app:layout_constraintStart_toStartOf="@+id/product_name_il"
            app:layout_constraintTop_toTopOf="@+id/time_p" />

        <com.example.task.presentation.utils.TimePickerCustom
            android:id="@+id/time_p"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@+id/date_p"
            android:scaleType="center"
            android:timePickerMode="spinner"
            app:layout_constraintDimensionRatio="17:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_p" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_p" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>